--- a/css/register.css
+++ b/css/register.css
@@ -1,57 +1,89 @@
-.timer{
-    background-color: indianred;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f9f9f9;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 400px;
+    margin: 50px auto;
     padding: 20px;
-    border-radius: 50px;
-    text-align: center;
+    background-color: #fff;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-
+}
+.gender{
+    padding-top: 50px;
+}
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333;
 }
 
-.timer-controls input {
-    width: 220px;
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #555;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea,
+select {
+    width: calc(100% - 20px);
     padding: 10px;
-    margin-right: 10px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 20px;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
-#start {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 20px;
-    background-color: seagreen;
-    color: #fff;
+button {
+    padding: 15px 30px;
     font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
+    width: auto;
 }
 
-#start:hover {
-    background-color: darkseagreen;
+button:hover {
+    opacity: 0.8;
 }
 
-.timer-container {
-    font-size: 2em;
+.social-buttons {
     text-align: center;
     margin-top: 20px;
-    color: seagreen;
+}
+
+.social-buttons button {
+    margin-right: 10px;
+    padding: 15px 30px;
+    font-size: 16px;
     font-weight: bold;
-    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: auto;
 }
 
-.timer-bar {
-    width: 100%;
-    height: 20px;
-    background-color: seagreen;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    border-radius: 5px;
+.social-buttons button.google-button {
+    background-color: #dd4b39;
+    color: #fff;
+    width: 180px;
+    height:60px;
+    text-align: center;
 }
 
-.timer-bar-fill {
-    height: 100%;
-    width: 100%;
-    background-color: seagreen;
-    border-radius: 5px;
-    transition: width 1s linear;
+.social-buttons button.facebook-button {
+    background-color: #3b5998;
+    color: #fff;
+    width: 180px;
+    height:60px;
+    text-align: center;
 }
