--- a/css/register.css
+++ b/css/register.css
@@ -3,13 +3,15 @@ body {
     background-color: #f9f9f9;
     margin: 0;
     padding: 0;
+    background-image: url("/yeltoresanzharmaga/assets/anime-reg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-
 .container {
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -71,11 +73,30 @@ button:hover {
 }
 
 .social-buttons button.google-button {
-    background-color: #dd4b39;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fa4444;
+    border: 1px solid #ccc;
+    padding: 10px;
+    width:400px;
+    height:50px;
     color: #fff;
+}
+.button-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
 }
 
 .social-buttons button.facebook-button {
     background-color: #3b5998;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #ccc;
+    padding: 10px;
+    width:400px;
+    height:50px;
     color: #fff;
 }
