--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,16 @@ background-color: rgb(20, 20, 20);
         border: 2px solid white;
         box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
     }
-
+.gameGoing{
+    margin-left: 250px;
+    margin-right: 250px;
+    background-color: rgb(19, 0, 97);
+    padding: 10px;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: goldenrod;
+}
 /*Countdown Timer*/
 .timer{
     background-color: black;
@@ -197,4 +206,41 @@ input[type="submit"]:hover {
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* Help page going button */
+/* Add any initial styles for your button */
+button.animate-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+/* Define the animation class */
+button.rotate {
+    animation: rotate 1s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* Change button background color when hovered */
+button.animate-button:hover {
+    background-color: #0056b3;
+}
+
+@keyframes scale {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.2); }
+    100% { transform: scale(1); }
 }
