--- a/gamePage/game.css
+++ b/gamePage/game.css
@@ -56,8 +56,15 @@ h2{
     cursor: pointer;
     font-size: 16px;
     margin-top: 20px;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 }
-
+a{
+   display: flex; 
+   justify-content: center;
+   align-items: center;
+}
 #redirectButton:hover {
     background-color: #9400D3; /* изменение цвета при наведении */
 }
