--- a/css/index.css
+++ b/css/index.css
@@ -57,23 +57,6 @@ background-color: rgb(20, 20, 20);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     color: goldenrod;
 }
-/*Countdown Timer*/
-.timer{
-    background-color: black;
-    padding: 20px;
-    border-radius: 50px;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    color: #2cdb5e;
-}
-
-.timer-controls input {
-    width: 220px;
-    padding: 10px;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 20px;
-}
 
 #start {
     padding: 10px 20px;
@@ -85,36 +68,6 @@ background-color: rgb(20, 20, 20);
     cursor: pointer;
 }
 
-#start:hover {
-    background-color: darkseagreen;
-}
-
-.timer-container {
-    font-size: 2em;
-    text-align: center;
-    margin-top: 20px;
-    color: seagreen;
-    font-weight: bold;
-    padding: 10px;
-}
-
-.timer-bar {
-    width: 100%;
-    height: 20px;
-    background-color: seagreen;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    border-radius: 5px;
-}
-
-.timer-bar-fill {
-    height: 100%;
-    width: 100%;
-    background-color: seagreen;
-    border-radius: 5px;
-    transition: width 1s linear;
-}
 /*Form Validation*/
 h1 {
     text-align: center;
@@ -243,3 +196,71 @@ button.animate-button:hover {
     100% { transform: scale(1); }
 }
 
+/*  Popup message handler */
+.chat-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 1px solid #ccc;
+    border-radius: 10px 10px 0 0;
+    background-color: #f1f1f1;
+    max-width: 300px;
+    z-index: 1000;
+  }
+
+  .chat-popup-header {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    text-align: center;
+    border-radius: 10px 10px 0 0;
+    cursor: pointer;
+  }
+
+  .chat-popup-content {
+    padding: 10px;
+    max-height: 250px;
+    overflow-y: auto;
+  }
+
+  .chat-popup textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: none;
+  }
+
+  .chat-popup button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .close-button {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+  }
+
+  #scrollBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+  }
