--- a/gamePage/game.css
+++ b/gamePage/game.css
@@ -1,7 +1,6 @@
 /* Styles for quiz items */
 
 body {
-    background-image: url('/yeltoresanzharmaga/assets/anime-game-background.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -71,4 +70,15 @@ a{
 
 #redirectButton:active {
     transform: scale(0.95); /* изменение масштаба при нажатии */
+}
+video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: -1;
 }
